<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:text="@string/size"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/separator_shape"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size"/>

    <TextView
        android:id="@+id/complexity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:text="@string/complexity"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size"
        android:clickable="true"
        android:focusable="true"/>

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/separator_shape"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complexity"/>

    <TextView
        android:id="@+id/vibration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/vibration"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complexity" />

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/separator_shape"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration"/>

    <TextView
        android:id="@+id/sound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration" />

    <View
        android:id="@+id/separator4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/separator_shape"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound"/>

    <Switch
        android:id="@+id/vibro_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:theme="@style/MySwitch"
        app:layout_constraintBottom_toBottomOf="@+id/vibration"
        app:layout_constraintEnd_toEndOf="@+id/vibration"
        app:layout_constraintTop_toTopOf="@+id/vibration" />

    <Switch
        android:id="@+id/sound_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:theme="@style/MySwitch"
        app:layout_constraintBottom_toBottomOf="@+id/sound"
        app:layout_constraintEnd_toEndOf="@+id/sound"
        app:layout_constraintTop_toTopOf="@+id/sound" />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/field_size"
        app:layout_constraintStart_toStartOf="@+id/size"
        app:layout_constraintBottom_toBottomOf="@+id/size" />

    <Spinner
        android:id="@+id/complexity_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/level_of_complexity"
        app:layout_constraintStart_toStartOf="@+id/complexity"
        app:layout_constraintBottom_toBottomOf="@+id/complexity" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_done"
        android:contentDescription="@string/ok_button"
        app:backgroundTint="@android:color/holo_blue_light"
        android:layout_margin="16dp"/>

</android.support.constraint.ConstraintLayout>